# DynamicBench

./: CMakeLists.txt  Plots.py
Data/: Dens  Reactivity.txt  Reference.txt  T  W.txt
IRTKinetics/: Auxiliary.hpp  EulerImplicit.hpp  HHUtilits.cpp  HHUtilits.h  HeatHydraulic.cpp  HeatHydraulic.h  Point2D.cpp  Point2D.h  ReactorState.cpp  ReactorState.h  ReactorUtilits.cpp  ReactorUtilits.h  Utilits.hpp  main.cpp
